     of all known local devices to stdout. [#3083]

 - `upsmon` client updates:
   * The `SHUTDOWNEXIT` option was not handled properly, and the requested
     long delays did not happen in practice. [issues #2133 and #3084, PR #3086]
   * Make use of `setproctag()` and `getproctag()` to report parent/child
     process names. [#3084]

 - `upssched` tool updates:
   * Previously in PR #2896 (NUT releases v2.8.3 and v2.8.4) the `UPSNAME` and
     `NOTIFYTYPE` environment variables were neutered for the timer daemon,
     since their values at the moment it first started were irrelevant when
     actual timers fired. Lack of those values was however also against the
     documented expectations. Now the values set when the `upssched` client
     is called and ends up updating the timer daemon would be passed into
     the timer. Also a `START-TIMER-SHARED` operation was added, to track a
     single named timer for possibly many devices and/or event types -- in
     this case they would be comma-separated in the environment variable
     values. [issue #3092, PR #3097]
   * The `CANCEL-TIMER` action no longer stops at first hit for the timer name,
     but goes on (in case there are duplicates). A new `CANCEL-TIMER-MATCHED`
     was added, which also cares to match `UPSNAME` and `NOTIFYTYPE` values
     (if passed). [#3097]
   * Introduced support for `DEBUG_MIN` setting via `upssched.conf`. [#3097]
   * Introduced `upssched -l` mode to list currently tracked timers. [#3097]
   * Make use of `setproctag()` and `getproctag()` to report parent/child
     process names. [#3084]

 - `configure` script options:
   * Introduced `--with-python{,2,3}-modules-dir` to specify PyNUT(Client)
     module installation location (for module-named dir to be created under
     it), if not bundling with NUT-Monitor UI app. By default the respective
     interpreter's 'site-packages' or 'dist-packages' location will be used,