@@ -399,6 +399,7 @@ const NotifyFlagsStrings::TypeStrings NotifyFlagsStrings::type_str = {
 	"COMMOK",	// NOTIFY_COMMOK
 	"COMMBAD",	// NOTIFY_COMMBAD
 	"SHUTDOWN",	// NOTIFY_SHUTDOWN
+	"SHUTDOWN_HOSTSYNC",	// NOTIFY_SHUTDOWN_HOSTSYNC
 	"REPLBATT",	// NOTIFY_REPLBATT
 	"NOCOMM",	// NOTIFY_NOCOMM
 	"NOPARENT",	// NOTIFY_NOPARENT
