@@ -332,6 +332,7 @@ POWERDOWNFLAG "@POWERDOWNFLAG@"
 # NOTIFYMSG COMMOK	"Communications with UPS %s established"
 # NOTIFYMSG COMMBAD	"Communications with UPS %s lost"
 # NOTIFYMSG SHUTDOWN	"Auto logout and shutdown proceeding"
+# NOTIFYMSG SHUTDOWN_HOSTSYNC	"Shutdown initiated; primary system is waiting for secondaries to log out or time out"
 # NOTIFYMSG REPLBATT	"UPS %s battery needs to be replaced"
 # NOTIFYMSG NOCOMM	"UPS %s is unavailable"
 # NOTIFYMSG NOPARENT	"upsmon parent process died - shutdown impossible"
