@@ -1552,6 +1552,8 @@ public:
 		NOTIFY_BOOST,
 		NOTIFY_NOTBOOST,
 
+		NOTIFY_SHUTDOWN_HOSTSYNC,
+
 		NOTIFY_OTHER = 28,
 		NOTIFY_NOTOTHER,
 
